Bumper fpsoknad-felles og fikser sonar feil